--- a/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
+++ b/src/app/modules/tour-plan/search-tour-plan/search-tour-plan.component.html
@@ -114,7 +114,7 @@
                 <div class="custom-accordion-head border-0" (click)="toggleAccordion(i)"
                      style="cursor: pointer">
                     <div class=" self-center ml-8">
-                        <span class="font-bold text-green">
+                        <span class=" text-green">
                             {{activity.VisitedDate}}
                         </span>
                     </div>
@@ -144,7 +144,7 @@
                 <div class="custom-accordion-body" id="{{'table_'+i}}" style="display: none">
                     <table class="table table-responsive" style="display: inline-table !important;">
                         <thead class="thead-light">
-                        <tr>
+                        <tr  class="table-header-background">
                             <th>VisitedDate</th>
                             <th>Purpose</th>
                             <th>Remarks</th>
