--- a/src/app/modules/tour-plan/tour-plan/tour-plan.component.html
+++ b/src/app/modules/tour-plan/tour-plan/tour-plan.component.html
@@ -103,18 +103,18 @@
         <!--        -->
         <!--        </div>-->
 
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+        <div class="flex flex-shrink-0 items-center pt-3 sm:mt-0">
             <button mat-raised-button color="primary" *ngIf="isAdd" (click)="Add()">
                 <mat-icon class="mr-2">add_circle</mat-icon>
                 Add
             </button>
-            <button mat-raised-button color="primary" *ngIf="isUpdate" (click)="Update()">Update</button>
-            <button *ngIf="isApproval" mat-raised-button color="primary" (click)="ChanageTourStatus('A')">Authorize
+            <button mat-raised-button color="primary" *ngIf="isUpdate" (click)="Update()"><mat-icon class="mr-2">update</mat-icon> Update</button>
+            <button *ngIf="isApproval"  class="ml-2"  mat-raised-button color="primary" (click)="ChanageTourStatus('A')">Authorize
             </button>
-            <button *ngIf="isApproval" mat-raised-button color="primary" (click)="ChanageTourStatus('R')">Reffer Back
+            <button *ngIf="isApproval" class="ml-2"  mat-raised-button color="primary" (click)="ChanageTourStatus('R')">Reffer Back
             </button>
-            <button *ngIf="flag=='1'" mat-raised-button color="primary" (click)="ChanageTourStatus('S')">Submit</button>
-            <button *ngIf="flag=='1'" mat-raised-button color="primary" (click)="ChanageTourStatus('C')">Cancel</button>
+            <button *ngIf="flag=='1'"  class="ml-2 bg-green" mat-raised-button color="primary" (click)="ChanageTourStatus('S')"><mat-icon class="mr-2">check_circle</mat-icon>Submit</button>
+            <button *ngIf="flag=='1'" class="ml-2 bg-red-500"  mat-raised-button color="primary" (click)="ChanageTourStatus('C')"><mat-icon class="mr-2">cancel</mat-icon>Cancel</button>
         </div>
 
     </div>
