--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -403,6 +403,11 @@ button:focus {
     padding: 12px;
 }
 
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+  }
+
 .ng-star-inserted {
 
     .reports {
