--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -1,5 +1,5 @@
 <div
-    class="px-10 pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+    class="  sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
     <div class="heading">Set Target
     </div>
     <div class="pt-3" [formGroup]="targetForm">
@@ -43,7 +43,7 @@
         <div  class="col-lg-12">
 <!--{{AssignTargetHeading|json}}-->
 <!--            {{assignedTarget|json}}-->
-            <div class="table-responsive overflow-auto" id="map_canvas" >
+            <div class="table-responsive overflow-y-auto overflow-x-hidden" id="map_canvas" >
                 <table class="table table-striped" >
 
 <!--                    <thead  *ngIf="AssignTargetHeading?.length>0">-->
@@ -165,7 +165,7 @@
             </div>
         </div>
     </div>
-    <div class="row mt-2">
+    <div class="row mt-2 mr-1">
         <div class="col-lg-12 text-right">
             <button class="ml-2 bg-green" mat-raised-button color="primary" (click)="save()"><mat-icon class="mr-2">save</mat-icon>Save</button>
             <button class="ml-2" mat-raised-button color="primary" (click)="submit()"><mat-icon class="mr-2">check_circle</mat-icon>Submit</button>
