--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -88,7 +88,9 @@ body.light .mat-flat-button.mat-primary, body.light .mat-raised-button.mat-prima
     width: 100% !important;
     background-repeat: round;
 }
-
+tbody tr:nth-child(odd) {
+    background: #eee;
+}
 
 .table-header-background {
     background-color: #01671B !important;
