--- a/src/app/modules/reports/print-loan-booklet/print-loan-booklet.component.html
+++ b/src/app/modules/reports/print-loan-booklet/print-loan-booklet.component.html
@@ -99,84 +99,107 @@
         </table>
     </div>
 
-    <div *ngIf="table">
-        <!-- <div
-            class="absolute inset-x-0 bottom-0">
-            <mat-progress-bar [mode]="'indeterminate'" *ngIf="!loaded"></mat-progress-bar>
-        </div> -->
+    <div class="col-lg-12">
 
-        <div class="mat-table__wrapper  border shadow-xs rounded-sm bg-gray-50" >
-            <!--[style.height]="gridHeight"-->
-            <mat-table
-                class="lmat-elevation-z8 overflow-scroll"
-                [style.height]="gridHeight"
-                #table
-                [dataSource]="
-                    dataSource
-                "
-                matSort
-                #sort1="matSort"
-                matSortActive="id"
-                matSortDirection="asc"
-                matSortDisableClear
-            >
-                <ng-container matColumnDef="Sr">
-                    <mat-header-cell *matHeaderCellDef
-                    >Sr#
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report.Sequence
-                        }}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="Description">
-                    <mat-header-cell *matHeaderCellDef
-                    >Description
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report.Description
-                        }}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="DocumentType">
-                    <mat-header-cell *matHeaderCellDef style="margin-left: 50px; margin-right: 30px;"
-                    >Document Type
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report" style="margin-left: 50px; margin-right: 30px;">{{
-                        report.BookletType
-                        }}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="Print">
-                    <mat-header-cell *matHeaderCellDef style="align-items: center"
-                    >Action
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report" style="align-items: center">
-                        <span style="color: #01671B; text-decoration: underline;" class="cursor-pointer" id="llcInqiryText" (click)="print(report)"><b>Print</b></span>
-                    </mat-cell>
-                </ng-container>
-
-                <mat-header-row
-                    *matHeaderRowDef="displayedColumns; sticky: true"
-                    class="table-header-background"
-                ></mat-header-row>
-
-                <mat-row
-                    *matRowDef="let row; columns: displayedColumns"
-                ></mat-row>
-            </mat-table>
-
-            <div class="mat-table__message" *ngIf="loading">
-                Please wait....
-            </div>
-
-
-        </div>
+        <table class="table table-striped " *ngIf="table">
+            <thead>
+            <tr class="table-header-background">
+                <th style="padding-right: 100px">Sr#</th>
+                <th>Description</th>
+                <th>Document Type</th>
+                <th style="padding-right: 70px">Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let report of bookletList">
+                <td style="padding-right: 100px">{{report.Sequence}}</td>
+                <td>{{report.Description}}</td>
+                <td>{{report.BookletType}}</td>
+                <td style="padding-right: 70px">
+                    <span style="color: #01671B; text-decoration: underline;" class="cursor-pointer" id="llcInqiryText" (click)="print(report)"><b>Print</b></span>
+                </td>
+            </tbody>
+        </table>
     </div>
+
+<!--    <div *ngIf="table">-->
+<!--        &lt;!&ndash; <div-->
+<!--            class="absolute inset-x-0 bottom-0">-->
+<!--            <mat-progress-bar [mode]="'indeterminate'" *ngIf="!loaded"></mat-progress-bar>-->
+<!--        </div> &ndash;&gt;-->
+
+<!--        <div class="mat-table__wrapper  border shadow-xs rounded-sm bg-gray-50" >-->
+<!--            &lt;!&ndash;[style.height]="gridHeight"&ndash;&gt;-->
+<!--            <mat-table-->
+<!--                class="lmat-elevation-z8 overflow-scroll"-->
+<!--                [style.height]="gridHeight"-->
+<!--                #table-->
+<!--                [dataSource]="-->
+<!--                    dataSource-->
+<!--                "-->
+<!--                matSort-->
+<!--                #sort1="matSort"-->
+<!--                matSortActive="id"-->
+<!--                matSortDirection="asc"-->
+<!--                matSortDisableClear-->
+<!--            >-->
+<!--                <ng-container matColumnDef="Sr">-->
+<!--                    <mat-header-cell *matHeaderCellDef-->
+<!--                    >Sr#-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell *matCellDef="let report">{{-->
+<!--                        report.Sequence-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
+
+<!--                <ng-container matColumnDef="Description">-->
+<!--                    <mat-header-cell *matHeaderCellDef-->
+<!--                    >Description-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell *matCellDef="let report">{{-->
+<!--                        report.Description-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
+
+<!--                <ng-container matColumnDef="DocumentType">-->
+<!--                    <mat-header-cell *matHeaderCellDef style="margin-left: 50px; margin-right: 30px;"-->
+<!--                    >Document Type-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell *matCellDef="let report" style="margin-left: 50px; margin-right: 30px;">{{-->
+<!--                        report.BookletType-->
+<!--                        }}</mat-cell>-->
+<!--                </ng-container>-->
+
+<!--                <ng-container matColumnDef="Print">-->
+<!--                    <mat-header-cell *matHeaderCellDef style="margin-left: 250px;"-->
+<!--                    >Action-->
+<!--                    </mat-header-cell-->
+<!--                    >-->
+<!--                    <mat-cell *matCellDef="let report" style="align-items: flex-end">-->
+<!--                        <span style="color: #01671B; text-decoration: underline;" class="cursor-pointer" id="llcInqiryText" (click)="print(report)"><b>Print</b></span>-->
+<!--                    </mat-cell>-->
+<!--                </ng-container>-->
+
+<!--                <mat-header-row-->
+<!--                    *matHeaderRowDef="displayedColumns; sticky: true"-->
+<!--                    class="table-header-background"-->
+<!--                ></mat-header-row>-->
+
+<!--                <mat-row-->
+<!--                    *matRowDef="let row; columns: displayedColumns"-->
+<!--                ></mat-row>-->
+<!--            </mat-table>-->
+
+<!--            <div class="mat-table__message" *ngIf="loading">-->
+<!--                Please wait....-->
+<!--            </div>-->
+
+
+<!--        </div>-->
+<!--    </div>-->
 
 </div>
 
