--- a/src/app/modules/tour-dairy/set-target/set-target.component.html
+++ b/src/app/modules/tour-dairy/set-target/set-target.component.html
@@ -42,7 +42,7 @@
     <div class="row">
         <div  class="col-lg-12">
 <!--{{AssignTargetHeading|json}}-->
-<!--            {{assignedTarget|json}}-->
+<!--            {{AssignedTargetHeading|json}}-->
             <div class="table-responsive overflow-y-auto overflow-x-hidden" id="map_canvas" >
                 <table class="table table-striped" >
 
@@ -52,11 +52,22 @@
 <!--                        <th *ngFor="let v of AssignHeadingKeys">{{ v }}</th>-->
 <!--                    </tr>-->
 <!--                    </thead>-->
-                    <thead>
+                    <thead *ngIf="!AssignedTargetHeading">
                     <tr class="table-header-background">
                         <th></th>
                         <ng-container *ngFor="let v of rowth;let i = index">
                             <th *ngIf="i !=0">
+                                {{ v }}
+                            </th>
+                        </ng-container>
+
+                    </tr>
+                    </thead>
+                    <thead *ngIf="AssignedTargetHeading">
+                    <tr class="table-header-background">
+                        <th></th>
+                        <ng-container *ngFor="let v of AssignedTargetHeadings;let i = index">
+                            <th>
                                 {{ v }}
                             </th>
                         </ng-container>
