--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,44 +1,46 @@
 <div
     class=" px-10   sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-auto bg-card dark:bg-transparent">
 
-    <mat-tab-group [ngClass]="{'dash-tab': userGroup.length == 1}" class="pt-4 flex  flex-auto dash-ttab  shadow-xs rounded-sm pb-3" style="flex-direction: column; overflow-y: scroll"
+    <mat-tab-group [ngClass]="{'dash-tab': userGroup.length == 1}"
+                   class="pt-4 flex  flex-auto dash-ttab  shadow-xs rounded-sm pb-3"
+                   style="flex-direction: column; overflow-y: scroll"
                    animationDuration="200ms" style="background-color: white;">
         <ng-container *ngFor="let item of userGroup">
 
-            <mat-tab   *ngIf=" item.ProfileID=='56'" ng-disable="visibleFlag" label="MCO">
-                <app-mco-dashborad></app-mco-dashborad>
+            <mat-tab *ngIf=" item.ProfileID=='56'" ng-disable="visibleFlag" label="MCO">
+                <app-mco-dashborad [ProfileID]="item.ProfileID"></app-mco-dashborad>
             </mat-tab>
 
             <mat-tab *ngIf="item.ProfileID=='206'" label="Recovery Officer">
-                <app-recovery-officer-dashboard></app-recovery-officer-dashboard>
+                <app-recovery-officer-dashboard [ProfileID]="item.ProfileID"></app-recovery-officer-dashboard>
             </mat-tab>
 
             <mat-tab *ngIf="item.ProfileID =='57'" label="Branch Manager">
-                <app-branch-manager-dashboard></app-branch-manager-dashboard>
+                <app-branch-manager-dashboard [ProfileID]="item.ProfileID"></app-branch-manager-dashboard>
             </mat-tab>
 
             <mat-tab *ngIf="item.ProfileID =='75'" label="Zonal Chief">
-                <app-zonal-chief-dashboard></app-zonal-chief-dashboard>
+                <app-zonal-chief-dashboard [ProfileID]="item.ProfileID"></app-zonal-chief-dashboard>
             </mat-tab>
 
             <mat-tab label="EVP (Operations Division)" *ngIf="item.ProfileID =='202'">
-                <app-evp-od-dashboard></app-evp-od-dashboard>
+                <app-evp-od-dashboard [ProfileID]="item.ProfileID"></app-evp-od-dashboard>
             </mat-tab>
 
             <mat-tab label="EVP (Credit Division)" *ngIf="item.ProfileID =='200'">
-                <app-evp-credit-dashboard></app-evp-credit-dashboard>
+                <app-evp-credit-dashboard [ProfileID]="item.ProfileID"></app-evp-credit-dashboard>
             </mat-tab>
 
             <mat-tab label="EVP (Recovery & SAM Division)" *ngIf="item.ProfileID =='201'">
-                <app-recovery-sam-division></app-recovery-sam-division>
+                <app-recovery-sam-division [ProfileID]="item.ProfileID"></app-recovery-sam-division>
             </mat-tab>
 
-            <mat-tab label="Resourccs Aveilable" *ngIf="item.ProfileID =='75'">
-                <app-recovery-available></app-recovery-available>
-            </mat-tab>
+            <!--            <mat-tab label="Resourccs Aveilable" *ngIf="item.ProfileID =='75'">-->
+            <!--                <app-recovery-available [ProfileID]="item.ProfileID"></app-recovery-available>-->
+            <!--            </mat-tab>-->
 
             <mat-tab label="President ZTBL" *ngIf="item.ProfileID =='204'">
-                <app-president-ztbl></app-president-ztbl>
+                <app-president-ztbl [ProfileID]="item.ProfileID"></app-president-ztbl>
             </mat-tab>
             <mat-tab label="Regional Chief" *ngIf="item.ProfileID =='203'">
                 <app-regional-cheif></app-regional-cheif>
@@ -50,5 +52,4 @@
     </mat-tab-group>
 
 
-    
 </div>
