--- a/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
+++ b/src/app/modules/dashboard/evp-od-dashboard/evp-od-dashboard.component.html
@@ -1,34 +1,49 @@
 <div
     class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading">EVP(Operation Division)</div>
-    <!-- Header -->
-    <!-- <div class="example-container">
-        <form [formGroup]="options">
-            <div class="row pt-2">
-                <div class="col-lg-4 pl-0">
-                    <mat-form-field class="w-full" appearance="outline">
-                        <mat-label>Date</mat-label>
-                        <input matInput [matDatepicker]="picker">
 
-                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                        <mat-datepicker #picker></mat-datepicker>
-                    </mat-form-field>
+    <form name="form" #f="ngForm" novalidate>
+        <div class="form-row row pt-2">
+            <div class="form-group col-lg-3">
+                <mat-form-field class="mat-form-field-fluid w-full mb-0" appearance="outline">
+                    <mat-label class="customMatLabel">Year</mat-label>
+                    <mat-select [(ngModel)]="year" name="year" #Year="ngModel"
+                                required>
+
+                        <mat-option *ngFor="let single_year of years;let i=index"
+                                    [value]="single_year">{{single_year}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <div *ngIf="f.submitted && Year.invalid" class="invalid-feedback">
+                    <div *ngIf="Year.errors.required">Title is required</div>
                 </div>
             </div>
+            <div class="form-group col-lg-3">
+                <button class="btn btn-primary mat-flat-button mr-1 bg-gray-500 mt-2 mat-primary" mat-raised-button
+                        (click)="getData()">
+                    <mat-icon class="mr-2">search</mat-icon>
+                    Search
+                </button>
 
-        </form>
-    </div> -->
+            </div>
+        </div>
+        <div class="text-center">
+
+        </div>
+    </form>
+
     <div class="flex flex-auto overflow-x-hidden overflow-y-scroll" style="flex-direction: column;">
 
         <!-- Products list -->
-        <div class=" overflow-x-hidden overflow-y-scroll" >
+        <div class=" overflow-x-hidden overflow-y-scroll">
             <div class="row pb-4">
                 <div class="col-lg-12">
                     <div class="shadow-sm border">
-                        <div id="chart" *ngIf="chartOptions"  class=" mt-0 py-3 shadow-sm border">
+                        <div id="chart" *ngIf="chartOptions" class=" mt-0 py-3 shadow-sm border">
                             <apx-chart [series]="chartOptions?.series" [chart]="chartOptions?.chart"
-                                [labels]="chartOptions?.labels" [title]="chartOptions?.title"
-                                [theme]="chartOptions?.theme" [responsive]="chartOptions?.responsive"></apx-chart>
+                                       [labels]="chartOptions?.labels" [title]="chartOptions?.title"
+                                       [theme]="chartOptions?.theme"
+                                       [responsive]="chartOptions?.responsive"></apx-chart>
                         </div>
                     </div>
 
@@ -57,10 +72,10 @@
                             </tr>
                         </thead> -->
                         <tbody>
-                            <tr *ngFor="let item of ResourcesCount">
-                                <td>{{item[0]}}</td>
-                                <td>{{item[1]}}</td>
-                            </tr>
+                        <tr *ngFor="let item of ResourcesCount">
+                            <td>{{item[0]}}</td>
+                            <td>{{item[1]}}</td>
+                        </tr>
                         </tbody>
 
                     </table>
@@ -76,10 +91,10 @@
                             </tr>
                         </thead> -->
                         <tbody>
-                            <tr *ngFor="let item of UtilizationMutation">
-                                <td>{{item[0]}}</td>
-                                <td>{{item[1]}}</td>
-                            </tr>
+                        <tr *ngFor="let item of UtilizationMutation">
+                            <td>{{item[0]}}</td>
+                            <td>{{item[1]}}</td>
+                        </tr>
                         </tbody>
                     </table>
                 </div>
