--- a/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
+++ b/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
@@ -2,123 +2,137 @@
     class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading">EVP(Recovery & SAM Division)</div>
     <!-- Header -->
-    <div class="example-container">
-        <form [formGroup]="options">
-            <div class="row pt-2">
-                <div class="col-lg-4 pl-0">
-                    <mat-form-field class="w-full" appearance="outline">
-                        <mat-label>Date</mat-label>
-                        <input matInput [matDatepicker]="picker">
+    <form name="form" #f="ngForm" novalidate>
+        <div class="form-row row pt-2">
+            <div class="form-group col-lg-3">
+                <mat-form-field class="mat-form-field-fluid w-full mb-0" appearance="outline">
+                    <mat-label class="customMatLabel">Year</mat-label>
+                    <mat-select [(ngModel)]="year" name="year" #Year="ngModel"
+                                required>
 
-                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                        <mat-datepicker #picker></mat-datepicker>
-                    </mat-form-field>
+                        <mat-option *ngFor="let single_year of years;let i=index"
+                                    [value]="single_year">{{single_year}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <div *ngIf="f.submitted && Year.invalid" class="invalid-feedback">
+                    <div *ngIf="Year.errors.required">Title is required</div>
                 </div>
             </div>
+            <div class="form-group col-lg-3">
+                <button class="btn btn-primary mat-flat-button mr-1 bg-gray-500 mt-2 mat-primary" mat-raised-button
+                        (click)="getData()">
+                    <mat-icon class="mr-2">search</mat-icon>
+                    Search
+                </button>
 
-        </form>
-    </div>
+            </div>
+        </div>
+        <div class="text-center">
+
+        </div>
+    </form>
+
     <div class="flex flex-auto overflow-y-scroll overflow-x-hidden" style="flex-direction: column;">
 
         <!-- Products list -->
 
-            <div class="row pb-4">
-                <div class="col-lg-6">
-                    <div class=" border">
-                        <div id="chart" *ngIf="chartOptions1" class=" mt-0 py-3 shadow-sm border">
-                            <apx-chart [series]="chartOptions1?.series" [chart]="chartOptions1?.chart"
-                                [labels]="chartOptions1?.labels" [title]="chartOptions1?.title"
-                                [theme]="chartOptions1?.theme" [responsive]="chartOptions1?.responsive"></apx-chart>
-                        </div>
+        <div class="row pb-4">
+            <div class="col-lg-6">
+                <div class=" border">
+                    <div id="chart" *ngIf="chartOptions1" class=" mt-0 py-3 shadow-sm border">
+                        <apx-chart [series]="chartOptions1?.series" [chart]="chartOptions1?.chart"
+                                   [labels]="chartOptions1?.labels" [title]="chartOptions1?.title"
+                                   [theme]="chartOptions1?.theme" [responsive]="chartOptions1?.responsive"></apx-chart>
                     </div>
-
                 </div>
-                <div class="col-lg-6">
-                    <div class=" border">
-                        <div id="chart" *ngIf="chartOptions2" class=" mt-0 py-3 shadow-sm border">
-                            <apx-chart [series]="chartOptions2?.series" [chart]="chartOptions2?.chart"
-                                [labels]="chartOptions2?.labels" [title]="chartOptions2?.title"
-                                [theme]="chartOptions2?.theme" [responsive]="chartOptions2?.responsive"></apx-chart>
-                        </div>
+
+            </div>
+            <div class="col-lg-6">
+                <div class=" border">
+                    <div id="chart" *ngIf="chartOptions2" class=" mt-0 py-3 shadow-sm border">
+                        <apx-chart [series]="chartOptions2?.series" [chart]="chartOptions2?.chart"
+                                   [labels]="chartOptions2?.labels" [title]="chartOptions2?.title"
+                                   [theme]="chartOptions2?.theme" [responsive]="chartOptions2?.responsive"></apx-chart>
                     </div>
-
                 </div>
-          </div>
-          <div class="row">
+
+            </div>
+        </div>
+        <div class="row">
             <div class="col-lg-6 py-3">
-                <div class="shadow-sm border pt-2" *ngIf="CreditCeiling" >
-                        <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
-                        <app-pyramid-chart [item]="CreditCeiling">
+                <div class="shadow-sm border pt-2" *ngIf="CreditCeiling">
+                    <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
+                    <app-pyramid-chart [item]="CreditCeiling">
 
-                        </app-pyramid-chart>
+                    </app-pyramid-chart>
 
-                </div>
-            </div>  
-          </div>
-            <div class="row">
-                <div class="col-lg-6 table-responsive">
-                    <table class="table table-striped">
-                        <tbody>
-                            <tr *ngFor="let item of DisbursmentAchievement">
-                                <td>{{item[0]}}</td>
-                                <td>{{item[01]}}</td>
-                            </tr>
-                        </tbody>
-
-                    </table>
-                </div>
-                <div class="col-lg-6 table-responsive">
-                    <table class="table table-striped">
-                        <tbody>
-                            <tr *ngFor="let item of RecoveryAchievement">
-                                <td>{{item[0]}}</td>
-                                <td>{{item[01]}}</td>
-                            </tr>
-                        </tbody>
-
-                    </table>
                 </div>
             </div>
-            <div class="row mt-3">
-                <div class="col-lg-16 table-responsive">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr class="table-header-background">
-                                <th scope="col">Sr. # </th>
-                                <th scope="col">Name Of Zone </th>
-                                <th scope="col">Amount</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let item of Top10NplZones">
-                                <td>{{item.SrNO}}</td>
-                                <td>{{item.Name}}</td>
-                                <td>{{item.Amount}}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="col-lg-16 table-responsive">
-                    <table class="table table-striped">
-                        <thead>
-                            <tr class="table-header-background">
-                                <th scope="col">Sr. # </th>
-                                <th scope="col">Name Of Zone </th>
-                                <th scope="col">Amount</th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let item of Top10SamZones">
-                                <td>{{item.SrNO}}</td>
-                                <td>{{item.Name}}</td>
-                                <td>{{item.Amount}}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-6 table-responsive">
+                <table class="table table-striped">
+                    <tbody>
+                    <tr *ngFor="let item of DisbursmentAchievement">
+                        <td>{{item[0]}}</td>
+                        <td>{{item[01]}}</td>
+                    </tr>
+                    </tbody>
+
+                </table>
             </div>
+            <div class="col-lg-6 table-responsive">
+                <table class="table table-striped">
+                    <tbody>
+                    <tr *ngFor="let item of RecoveryAchievement">
+                        <td>{{item[0]}}</td>
+                        <td>{{item[01]}}</td>
+                    </tr>
+                    </tbody>
+
+                </table>
+            </div>
+        </div>
+        <div class="row mt-3">
+            <div class="col-lg-16 table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                    <tr class="table-header-background">
+                        <th scope="col">Sr. #</th>
+                        <th scope="col">Name Of Zone</th>
+                        <th scope="col">Amount</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let item of Top10NplZones">
+                        <td>{{item.SrNO}}</td>
+                        <td>{{item.Name}}</td>
+                        <td>{{item.Amount}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-lg-16 table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                    <tr class="table-header-background">
+                        <th scope="col">Sr. #</th>
+                        <th scope="col">Name Of Zone</th>
+                        <th scope="col">Amount</th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let item of Top10SamZones">
+                        <td>{{item.SrNO}}</td>
+                        <td>{{item.Name}}</td>
+                        <td>{{item.Amount}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
 
     </div>
 </div>
