--- a/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
+++ b/src/app/modules/dashboard/zonal-chief-dashboard/zonal-chief-dashboard.component.html
@@ -1,34 +1,34 @@
 <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading ">Zonal Chief</div>
-    <!-- <div>
-        <form [formGroup]="options">
-            <div class="row pt-2">
-                <div class="col-lg-4">
-                    <mat-form-field class="w-full" appearance="outline">
-                        <mat-label>Date</mat-label>
-                        <input matInput [matDatepicker]="picker">
+    <form name="form" #f="ngForm" novalidate>
+        <div class="form-row row pt-2">
+            <div class="form-group col-lg-3">
+                <mat-form-field class="mat-form-field-fluid w-full mb-0" appearance="outline">
+                    <mat-label class="customMatLabel">Year</mat-label>
+                    <mat-select [(ngModel)]="year" name="year" #Year="ngModel"
+                                required>
 
-                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                        <mat-datepicker #picker></mat-datepicker>
-                    </mat-form-field>
-                </div>
-                <div class="col-lg-4">
-                    <mat-form-field class="w-full" appearance="outline" [floatLabel]="floatLabelControl?.value">
-                        <mat-label>Zone Name</mat-label>
-                        <input matInput placeholder="Enter Branch Name">
-                    </mat-form-field>
-                </div>
-                <div class="col-lg-4">
-                    <mat-form-field class="w-full" appearance="outline" [floatLabel]="floatLabelControl?.value">
-                        <mat-label>Province Name</mat-label>
-                        <input matInput placeholder="Enter Zone Name">
-                    </mat-form-field>
+                        <mat-option *ngFor="let single_year of years;let i=index"
+                                    [value]="single_year">{{single_year}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <div *ngIf="f.submitted && Year.invalid" class="invalid-feedback">
+                    <div *ngIf="Year.errors.required">Title is required</div>
                 </div>
             </div>
+            <div class="form-group col-lg-3">
+                <button class="btn btn-primary mat-flat-button mr-1 bg-gray-500 mt-2 mat-primary" mat-raised-button
+                        (click)="getData()">
+                    <mat-icon class="mr-2">search</mat-icon>
+                    Search
+                </button>
 
+            </div>
+        </div>
+        <div class="text-center">
 
-        </form>
-    </div> -->
+        </div>
+    </form>
     <!-- Main -->
     <div class="flex flex-auto overflow-y-scroll">
 
@@ -74,10 +74,10 @@
                     </div>
                 </div>
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling" >
-                            <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
-                            <app-pyramid-chart [item]="CreditCeiling">
-                            </app-pyramid-chart>
+                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling">
+                        <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
+                        <app-pyramid-chart [item]="CreditCeiling">
+                        </app-pyramid-chart>
 
                     </div>
                 </div>
