--- a/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
+++ b/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
@@ -2,6 +2,35 @@
     class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
     <div class="heading">Provincial Cheif</div>
     <!-- Header -->
+    <form name="form" #f="ngForm" novalidate>
+        <div class="form-row row pt-2">
+            <div class="form-group col-lg-3">
+                <mat-form-field class="mat-form-field-fluid w-full mb-0" appearance="outline">
+                    <mat-label class="customMatLabel">Year</mat-label>
+                    <mat-select [(ngModel)]="year" name="year" #Year="ngModel"
+                                required>
+
+                        <mat-option *ngFor="let single_year of years;let i=index"
+                                    [value]="single_year">{{single_year}}</mat-option>
+                    </mat-select>
+                </mat-form-field>
+                <div *ngIf="f.submitted && Year.invalid" class="invalid-feedback">
+                    <div *ngIf="Year.errors.required">Title is required</div>
+                </div>
+            </div>
+            <div class="form-group col-lg-3">
+                <button class="btn btn-primary mat-flat-button mr-1 bg-gray-500 mt-2 mat-primary" mat-raised-button
+                        (click)="getData()">
+                    <mat-icon class="mr-2">search</mat-icon>
+                    Search
+                </button>
+
+            </div>
+        </div>
+        <div class="text-center">
+
+        </div>
+    </form>
 
     <!-- Main -->
     <div class="flex flex-auto overflow-x-hidden overflow-y-scroll">
@@ -26,10 +55,10 @@
 
                 </div>
                 <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling" >
-                            <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
-                            <app-pyramid-chart [item]="CreditCeiling">
-                            </app-pyramid-chart>
+                    <div class="shadow-sm border pt-2" *ngIf="CreditCeiling">
+                        <p class=" ml-3" style="font-size: 14px; font-weight: 900;">Credit Ceiling</p>
+                        <app-pyramid-chart [item]="CreditCeiling">
+                        </app-pyramid-chart>
                     </div>
                 </div>
             </div>
